--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ iframe{
         <span class="icon-bar"></span>                        
       </button>
       <a class="social-media" href = "https://gcriste.github.io/Maddie-in-Good-Company/"><img
-         class="img-fluid social" src="../Maddie-in-Good-Company/assets/images/MGC logo.jpg"  alt = "logo" width="50" height="50">
+         class="img-fluid social" src="assets/images/MGC logo.jpg"  alt = "logo" width="50" height="50">
         <a class="social-media" href="https://www.instagram.com/maddieingoodcompany/"> <img
         class="img-fluid social" src="assets/images/instagram logo.jpeg" alt="instagram icon"></a>
         <a class="social-media" href="https://www.facebook.com/MaddieInGoodCompany/"><img
@@ -221,7 +221,7 @@ iframe{
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="../Maddie-in-Good-Company/assets/images/AnalogMaddie.jpeg" alt="Analog" width="1200" height="700">
+        <img src="assets/images/AnalogMaddie.jpeg" alt="Analog" width="1200" height="700">
         <div class="carousel-caption">
           <!-- <h3>New York</h3>
           <p>The atmosphere in New York is lorem ipsum.</p> -->
@@ -229,7 +229,7 @@ iframe{
       </div>
 
       <div class="item">
-        <img src="../Maddie-in-Good-Company/assets/images/MaddieinGoodCompany.jpeg" alt="Faces" width="1200" height="700">
+        <img src="assets/images/MaddieinGoodCompany.jpeg" alt="Faces" width="1200" height="700">
         <div class="carousel-caption">
           <!-- <h3>Chicago</h3>
           <p>Thank you, Chicago - A night we won't forget.</p> -->
@@ -237,7 +237,7 @@ iframe{
       </div>
     
       <div class="item">
-        <img src="../Maddie-in-Good-Company/assets/images/maddieingoodco.jpg" alt="Layman" width="1200" height="700">
+        <img src="assets/images/maddieingoodco.jpg" alt="Layman" width="1200" height="700">
         <div class="carousel-caption">
           <!-- <h3>LA</h3>
           <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p> -->
@@ -266,7 +266,7 @@ iframe{
     <div class="col-sm-4">
         <p class="text-center"><strong>Maddie</strong></p><br>
         <a href="#demo2" data-toggle="collapse">
-            <img src="../Maddie-in-Good-Company/assets/images/maddie.jpg" class="img-circle person" alt="Maddie" width="255" height="255">
+            <img src="assets/images/maddie.jpg" class="img-circle person" alt="Maddie" width="255" height="255">
         </a>
         <div id="demo2" class="collapse">
             <p>Singer</p>
@@ -277,7 +277,7 @@ iframe{
     <div class="col-sm-4">
       <p class="text-center"><strong>Chris</strong></p><br>
       <a href="#demo" data-toggle="collapse">
-        <img src="../Maddie-in-Good-Company/assets/images/chris.jpg" class="img-circle person" alt="Chris" width="255" height="255">
+        <img src="assets/images/chris.jpg" class="img-circle person" alt="Chris" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
         <p>Guitarist</p>
@@ -289,7 +289,7 @@ iframe{
     <div class="col-sm-4">
       <p class="text-center"><strong>Griffin</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
-        <img src="../Maddie-in-Good-Company/assets/images/griffin.jpg" class="img-circle person" alt="Griffin" width="255" height="255">
+        <img src="assets/images/griffin.jpg" class="img-circle person" alt="Griffin" width="255" height="255">
       </a>
       <div id="demo3" class="collapse">
         <p>Drummer</p>
@@ -314,7 +314,7 @@ iframe{
       <div class="col-sm-4"></div>
         <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="../Maddie-in-Good-Company/assets/images/5spot.jpeg" alt="5 spot" width="400" height="300">
+          <img src="assets/images/5spot.jpeg" alt="5 spot" width="400" height="300">
           <p><strong>@ The 5 Spot</strong></p>
           <p>January 5 2020</p>
           <p>w/ Camden West & Carter Veil</p>
