--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ iframe{
         </a>
         <div id="demo2" class="collapse">
             <p>Singer</p>
-            <p>Favorite food: Pizza</p>
+            <p>Favorite Food: Chicky Chicky Parm Parm</p>
         </div>
     </div>
     <div class="col-sm-4">
@@ -280,7 +280,7 @@ iframe{
       </a>
       <div id="demo" class="collapse">
         <p>Guitarist</p>
-        <p>Favorite food: Ceviche</p>
+        <p>Favorite Food: Ceviche</p>
       </div>
     </div>
   
@@ -291,7 +291,7 @@ iframe{
       </a>
       <div id="demo3" class="collapse">
         <p>Drummer</p>
-        <p>Favorite food: Crabcakes</p>
+        <p>Favorite Food: (Baltimore) Crabcakes</p>
       </div>
     </div>
   </div>
@@ -333,6 +333,7 @@ iframe{
           <button type="button" class="close" data-dismiss="modal">×</button>
           <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
           <h3>$10</h3>
+          <p style= "font-size:14px"><em>*Note: Purchase of ticket allows free entry for show, but you will not recieve a physical ticket in mail. To redeem ticket provide your name to the front door.</em></p>
         </div>
         <div class="modal-body">
        <div id="paypal-button-container"></div>
@@ -466,15 +467,15 @@ iframe{
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <h2>Maddie, SuperStar/Vocals</h2>
+      <h2>Mad Dawg Turner, SuperStar/Vocals</h2>
       <p>"I just wanna be a star"</p>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <h2>Hattie-McVest Canone, Guitarist</h2>
+      <h2>Hattie-McVest Cannone, Guitarist</h2>
       <p>"I can't sit still for more than 5 seconds"</p>
     </div>
     <div id="menu2" class="tab-pane fade">
-      <h2>Grandpa Griff, Drummer</h2>
+      <h2>Grandpa Griff Criste, Drummer</h2>
       <p>"Where's the food man?"</p>
     </div>
   </div>
