--- a/index.html
+++ b/index.html
@@ -430,16 +430,16 @@ iframe{
 <!-- Container (Contact Section) -->
 <div id="contact" class="container">
   <h3 class="text-center">Contact</h3>
-  <p class="text-center"><em>We love our fans!</em></p>
+  <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
   <div class="row">
-    <div class="col-md-4">
-      <p>Fan? Drop a note.</p>
+    <div class = "col-md-12 text-center">
+      <!-- <p>Fan? Drop a note.</p> -->
       <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
       <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
       <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
     </div>
-    <div class="col-md-8">
+    <!-- <div class="col-md-8">
       <div class="row">
         <div class="col-sm-6 form-group">
           <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
@@ -455,7 +455,7 @@ iframe{
           <button class="btn pull-right" type="submit">Send</button>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <br>
   <h3 class="text-center">From The Blog</h3>  
