--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     color: #111;
   }
   .container {
-    padding: 80px 120px;
+    padding: 40px 60px;
   }
   .person {
     border: 10px solid transparent;
@@ -416,8 +416,8 @@ iframe{
     <div class = "container">
         <h3 class = "text-center"> Spotify Songs</h3>
             <div class = "row text-center">
-                <div class = "col-xs-12 col-md-12">
-                <iframe class = "img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="600" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <div class = "col-md-12 col-xs-12">
+                <iframe class = "img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="1000" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
     </div>
