--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@ iframe{
 <!-- Container for Media -->
 <br><br>
 <div id = "media">
+  <div class = "container">
     <h3 class="text-center">Media</h3>
     <div id="myCarouseltwo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -412,6 +413,7 @@ iframe{
               <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
+          </div>
         </div>
     <div class = "container">
         <h3 class = "text-center"> Spotify Songs</h3>
