--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     color: #111;
   }
   .container {
-    padding: 40px 60px;
+    padding: 60px 40px;
   }
   .person {
     border: 10px solid transparent;
@@ -172,8 +172,9 @@
 }
 
 iframe{
-    border:5px solid #777;
+    border:3px solid #777;
     border-radius:10px;
+    box-shadow:0 3px 6px #999, 0 3px 6px #999;
 }
   </style>
 </head>
@@ -373,6 +374,7 @@ iframe{
 <!-- Container for Media -->
 <br><br>
 <div id = "media">
+  <div class = "container">
     <h3 class="text-center">Media</h3>
     <div id="myCarouseltwo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -413,6 +415,9 @@ iframe{
               <span class="sr-only">Next</span>
             </a>
         </div>
+      </div>
+        <br>
+
     <div class = "container">
         <h3 class = "text-center"> Spotify Songs</h3>
             <div class = "row text-center">
