--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 iframe{
     border:3px solid #777;
     border-radius:10px;
-    box-shadow:0 3px 6px #999, 0 3px 6px #999;
+    /* box-shadow:0 3px 6px #999, 0 3px 6px #999; */
 }
   </style>
 </head>
@@ -374,7 +374,7 @@ iframe{
 <!-- Container for Media -->
 <br><br>
 <div id = "media">
-  <div class = "container">
+  <!-- <div class = "container"> -->
     <h3 class="text-center">Media</h3>
     <div id="myCarouseltwo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -415,7 +415,7 @@ iframe{
               <span class="sr-only">Next</span>
             </a>
         </div>
-      </div>
+      <!-- </div> -->
         <br>
 
     <div class = "container">
