--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ iframe{
         class="img-fluid social" src="assets/images/facebook.png" alt="facebook icon"></a>
         <a class="social-media" href="https://twitter.com/MadGoodCo"><img
             class="img-fluid social" src="assets/images/twitterlogo5.png" alt="twitter icon"></a>
-  
+      <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -- -->
 
     </div>
     <div class = "nav navbar-nav navbar-center bg-1">
