--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
     </div>
         <div class="row">
           <div class="col-sm-5"></div>
-      <div class="col-sm-1 text-center">
+      <div class="col-sm-1">
         <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="429FRYFLW9BLC">
